theaa-prod/force-app/main/default/objects/Continuous_Improvement__c/Continuous_Improvement__c.object-meta.xml
<CustomObject>
    <label>Continuous Improvement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continuous Improvements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>