theaa-prod/force-app/main/default/objects/Continuous_Improvement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Continuous Improvements</relationshipLabel>
    <relationshipName>Continuous_Improvements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>