theaa-prod/force-app/main/default/objects/Continuous_Improvement__c/fields/Estimated_Hourly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hourly_Cost__c</fullName>
    <label>Estimated Hourly Cost</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>