theaa-prod/force-app/main/default/objects/Continuous_Improvement__c/fields/For__c.field-meta.xml
<CustomField>
    <fullName>For__c</fullName>
    <inlineHelpText>Audience</inlineHelpText>
    <label>For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>