theaa-prod/force-app/main/default/objects/Continuous_Improvement__c/fields/Our_solution_will__c.field-meta.xml
<CustomField>
    <fullName>Our_solution_will__c</fullName>
    <inlineHelpText>Challenge</inlineHelpText>
    <label>Our solution will</label>
    <length>80</length>
    <type>Text</type>
</CustomField>