theaa-prod/force-app/main/default/objects/Continuous_Improvement__c/fields/Product_Lead__c.field-meta.xml
<CustomField>
    <fullName>Product_Lead__c</fullName>
    <label>Product Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To be added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>