theaa-prod/force-app/main/default/objects/Continuous_Improvement__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <formula>TEXT(Account__r.Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector</label>
    <type>Text</type>
</CustomField>