theaa-prod/force-app/main/default/objects/Continuous_Improvement__c/fields/We_will_know_we_are_successful_when__c.field-meta.xml
<CustomField>
    <fullName>We_will_know_we_are_successful_when__c</fullName>
    <description>business outcomes</description>
    <inlineHelpText>Business outcomes</inlineHelpText>
    <label>We will know we are successful when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>